# neurodiverse-job-quest

./: .dockerignore  .gitignore  README.md  analysis_templates.py  app.py  create_tables.py  dockerfile  job_analyzer.py  main.py  models.py  pyproject.toml  requirements.txt  response_evaluator.py  utils.py
contents/: analysis-bank.json  job-bank.json
front_end/static/js/: api.js  app.js
instance/: app.db
lambda-approach-2/: README.md  app.py  job_analyzer.py  requirements.txt  response_evaluator.py
lambda-approach-2/front_end/: README.md  index.html
lambda-approach-2/front_end/static/css/: styles.css
lambda-approach-2/front_end/static/js/: api.js  app.js
lambda_functions/: Dockerfile  README.md  app_init.py  frontend_proxy.py  job_analyzer.py  lambda_architecture.py  models.py  questionnaire_api.py  requirements.txt  results_api.py  samconfig.toml  template.yaml  utils.py
static/css/: style.css
static/js/: main.js
templates/: base.html  question.html  results.html  welcome.html
